issue 9 fixed-about page Youtube player center aligned

--- a/startbootstrap-modern-business-gh-pages/css/ncbs-responsive.css
+++ b/startbootstrap-modern-business-gh-pages/css/ncbs-responsive.css
@@ -108,5 +108,10 @@ background-color:#357774;
 color:#FFFFFF;
 font-weight:300;
 }
-
+.theme-about-video {
+    /*margin-left: 8%;*/
+    width: 100%;
+    margin-top: 5%;
+    margin-right:15px;
+}
 
